--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SESSION_ID="PLEASE ADD YOUR SESSION HERE INCONNU~XD~"
+SESSION_ID="INCONNU~XD~r0ASETQZ#KPIq_OhaySPSKZwyVeNAEwtN3rcxyFd4WDmYHAcl6XA"
 PREFIX=.
-OWNER_NUMBER=554488138425
-SUDO_NUMBER=554488138425
-OWNER_NAME=INCONNU BOY
+OWNER_NUMBER=50941792578
+SUDO_NUMBER=50941792578
+OWNER_NAME=Cho
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
 AUTO_STATUS_REACT=true
@@ -16,5 +16,5 @@ ANTIBOT_WARNINGS=3
 REJECT_CALL=false
 NOT_ALLOW=true
 AUTO_STATUS_REACT=true
-MODE=public
+MODE=privé 
 WELCOME=false
